@@ -1,98 +1,4 @@
-package utils;//package Main;
-//
-//import com.google.gson.Gson;
-//import com.google.gson.JsonArray;
-//import com.google.gson.JsonObject;
-//import okhttp3.OkHttpClient;
-//import okhttp3.Request;
-//import okhttp3.Response;
-//import java.io.IOException;
-//
-//public class GoogleBooksAPI {
-//    private static final String API_KEY = "AIzaSyAc4FaGOKPtQ2fogm2oMwiVpF5Q1Tl4seI";
-//    private static final String BASE_URL = "https://www.googleapis.com/books/v1/volumes";
-//
-//    private static final String API_URL = "https://www.googleapis.com/books/v1/volumes?q=java+programming";
-//
-//    public static void main(String[] args) {
-//        String isbn = "9781499462746"; // Từ khóa tìm kiếm
-//        String url = BASE_URL + "?q=isbn:" + isbn + "&key=" + API_KEY;
-//
-////        // Tạo OkHttpClient
-////        OkHttpClient client = new OkHttpClient();
-////
-////        // Tạo yêu cầu HTTP
-////        Request request = new Request.Builder()
-////                .url(url)
-////                .build();
-////
-////        // Gửi yêu cầu và xử lý phản hồi
-////        try (Response response = client.newCall(request).execute()) {
-////            if (response.isSuccessful()) {
-////                String jsonData = response.body().string();
-////                System.out.println("Response Data: " + jsonData);
-////            } else {
-////                System.out.println("Request failed: " + response.code());
-////            }
-////        } catch (IOException e) {
-////            e.printStackTrace();
-////        }
-//
-//        OkHttpClient client = new OkHttpClient();
-//
-//        // Tạo Request
-//        Request request = new Request.Builder()
-//                .url(url)
-//                .build();
-//
-//        try {
-//            // Gửi Request và nhận Response
-//            Response response = client.newCall(request).execute();
-//
-//            if (response.isSuccessful() && response.body() != null) {
-//                // Đọc nội dung phản hồi
-//                String jsonResponse = response.body().string();
-//                parseBooks(jsonResponse);
-//            } else {
-//                System.out.println("Error: " + response.code());
-//            }
-//        } catch (IOException e) {
-//            e.printStackTrace();
-//        }
-//    }
-//
-//    private static void parseBooks(String jsonResponse) {
-//        // Sử dụng Gson để phân tích JSON
-//        Gson gson = new Gson();
-//        JsonObject jsonObject = gson.fromJson(jsonResponse, JsonObject.class);
-//
-//        // Lấy danh sách sách từ "items"
-//        JsonArray items = jsonObject.getAsJsonArray("items");
-//
-//        if (items != null) {
-//            for (int i = 0; i < items.size(); i++) {
-//                JsonObject book = items.get(i).getAsJsonObject();
-//                JsonObject volumeInfo = book.getAsJsonObject("volumeInfo");
-//
-//                // Lấy thông tin cơ bản
-//                String title = volumeInfo.get("title").getAsString();
-//                String authors = volumeInfo.has("authors") ? volumeInfo.get("authors").toString() : "Unknown";
-//                String publisher = volumeInfo.has("publisher") ? volumeInfo.get("publisher").getAsString() : "Unknown";
-//                String publishedDate = volumeInfo.has("publishedDate") ? volumeInfo.get("publishedDate").getAsString() : "Unknown";
-//
-//                System.out.println("Title: " + title);
-//                System.out.println("Authors: " + authors);
-//                System.out.println("Publisher: " + publisher);
-//                System.out.println("Published Date: " + publishedDate);
-//                System.out.println("-------------");
-//            }
-//        } else {
-//            System.out.println("No books found.");
-//        }
-//    }
-//}
-
-
+package utils;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
@@ -100,20 +6,25 @@ import com.google.gson.JsonObject;
 import okhttp3.OkHttpClient;
 import okhttp3.Request;
 import okhttp3.Response;
+import dao.BookDAO;
+
 import java.io.IOException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import static dao.BookDAO.saveBooksToDatabase;
 
 public class GoogleBooksAPI {
-    private static final String API_KEY = "AIzaSyAc4FaGOKPtQ2fogm2oMwiVpF5Q1Tl4seI";
+    private static final String API_KEY = "YOUR_API_KEY_HERE"; // Thay bằng API Key của bạn
     private static final String BASE_URL = "https://www.googleapis.com/books/v1/volumes";
 
     public static void main(String[] args) {
         // Danh sách ISBN
-        List<String> queries = Arrays.asList(
+        List<String> queries = List.of(
                 "9781032919980", "9781439894057", "9783540403869", "9781614445166",
                 "9783030451936", "9780883859155", "9781461261353", "9780521592710",
                 "9781139435161", "9780849371646", "9781470474553", "9780128010501",
@@ -125,64 +36,99 @@ public class GoogleBooksAPI {
                 "9781119062790", "9781511689250"
         );
 
-        GoogleBooksAPI googleBooksAPI=new GoogleBooksAPI();
-        for (int i=0; i<queries.size();i++) {
-            googleBooksAPI.getData(queries.get(i));
+        GoogleBooksAPI googleBooksAPI = new GoogleBooksAPI();
+        for (String isbn : queries) {
+            googleBooksAPI.getData(isbn);
         }
     }
 
     public void getData(String isbn) {
         OkHttpClient client = new OkHttpClient();
 
-        String url = BASE_URL + "?q=isbn" + isbn + "&key=" + API_KEY;
-            // Tạo Request
-            Request request = new Request.Builder()
-                    .url(url)
-                    .build();
+        // Sửa URL: thêm dấu hai chấm sau 'isbn'
+        String url = BASE_URL + "?q=isbn:" + isbn + "&key=" + API_KEY;
 
-            try {
-                // Gửi Request và nhận Response
-                Response response = client.newCall(request).execute();
-
-                if (response.isSuccessful() && response.body() != null) {
-                    // Đọc nội dung phản hồi
-                    String jsonResponse = response.body().string();
-                    System.out.println("Results for ISBN: " + isbn);
-                    saveBooksToDatabase(jsonResponse);
-                } else {
-                    System.out.println("Error for ISBN " + isbn + ": " + response.code());
-                }
-            } catch (IOException e) {
-                System.out.println("Error for ISBN " + isbn + ": " + e.getMessage());
-            } catch (SQLException e) {
-                throw new RuntimeException(e);
-            }
-    }
-
-
-    public static List<BookSuggestion> getSuggestions(String query) {
-        List<BookSuggestion> suggestions = new ArrayList<>();
-
-        String url = BASE_URL + "?q=" + query + "&key=" + API_KEY;
-        OkHttpClient client = new OkHttpClient();
-
+        // Tạo Request
         Request request = new Request.Builder()
                 .url(url)
                 .build();
 
-        try (Response response = client.newCall(request).execute()) {
+        try {
+            // Gửi Request và nhận Response
+            Response response = client.newCall(request).execute();
+
             if (response.isSuccessful() && response.body() != null) {
+                // Đọc nội dung phản hồi
                 String jsonResponse = response.body().string();
-                suggestions = parseBooks(jsonResponse);
+                System.out.println("Results for ISBN: " + isbn);
+                saveBooksToDatabase(jsonResponse);
+            } else {
+                System.out.println("Error for ISBN " + isbn + ": " + response.code());
             }
         } catch (IOException e) {
-            e.printStackTrace();
+            System.out.println("Error for ISBN " + isbn + ": " + e.getMessage());
+        } catch (SQLException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    // Phương thức lấy danh sách sách dựa trên các từ khóa (tìm kiếm theo từ khóa)
+    public static List<BookSuggestion> getSuggestionsByKeyword(List<String> queries) {
+        List<BookSuggestion> suggestions = new ArrayList<>();
+
+        for (String query : queries) {
+            // URL encode từ khóa để tránh lỗi cú pháp
+            String encodedQuery = URLEncoder.encode(query, StandardCharsets.UTF_8);
+            String url = BASE_URL + "?q=" + encodedQuery + "&key=" + API_KEY;
+            OkHttpClient client = new OkHttpClient();
+
+            Request request = new Request.Builder()
+                    .url(url)
+                    .build();
+
+            try (Response response = client.newCall(request).execute()) {
+                if (response.isSuccessful() && response.body() != null) {
+                    String jsonResponse = response.body().string();
+                    System.out.println("API Response for query \"" + query + "\": " + jsonResponse);
+                    suggestions.addAll(parseBooks(jsonResponse));
+                } else {
+                    System.out.println("API request failed for query \"" + query + "\": " + response.code());
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
         }
 
         return suggestions;
     }
 
-    private static List<BookSuggestion> parseBooks(String jsonResponse) {
+    // Phương thức lấy danh sách sách dựa trên ISBN
+    public static List<BookSuggestion> getSuggestionsByISBN(List<String> isbns) {
+        List<BookSuggestion> suggestions = new ArrayList<>();
+
+        for (String isbn : isbns) {
+            String url = BASE_URL + "?q=isbn:" + isbn + "&key=" + API_KEY;
+            OkHttpClient client = new OkHttpClient();
+
+            Request request = new Request.Builder()
+                    .url(url)
+                    .build();
+
+            try (Response response = client.newCall(request).execute()) {
+                if (response.isSuccessful() && response.body() != null) {
+                    String jsonResponse = response.body().string();
+                    suggestions.addAll(parseBooks(jsonResponse));
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+
+        return suggestions;
+    }
+
+    // Phương thức phân tích JSON và tạo danh sách BookSuggestion
+    public static List<BookSuggestion> parseBooks(String jsonResponse) {
         List<BookSuggestion> suggestions = new ArrayList<>();
         Gson gson = new Gson();
         JsonObject jsonObject = gson.fromJson(jsonResponse, JsonObject.class);
@@ -194,9 +140,17 @@ public class GoogleBooksAPI {
                 JsonObject volumeInfo = book.getAsJsonObject("volumeInfo");
 
                 String title = volumeInfo.has("title") ? volumeInfo.get("title").getAsString() : "Unknown Title";
-                String thumbnail = volumeInfo.has("imageLinks") && volumeInfo.getAsJsonObject("imageLinks").has("thumbnail")
-                        ? volumeInfo.getAsJsonObject("imageLinks").get("thumbnail").getAsString()
-                        : null;
+                String thumbnail = null;
+                if (volumeInfo.has("imageLinks")) {
+                    JsonObject imageLinks = volumeInfo.getAsJsonObject("imageLinks");
+                    if (imageLinks.has("thumbnail")) {
+                        thumbnail = imageLinks.get("thumbnail").getAsString();
+                        // Google Books API thường trả về URL bắt đầu bằng "http", cần chuyển thành "https"
+                        if (thumbnail.startsWith("http://")) {
+                            thumbnail = "https://" + thumbnail.substring(7);
+                        }
+                    }
+                }
 
                 suggestions.add(new BookSuggestion(title, thumbnail));
             }
@@ -205,6 +159,24 @@ public class GoogleBooksAPI {
         return suggestions;
     }
 
+    // Phương thức lưu sách vào cơ sở dữ liệu
+    public static void saveBooksToDatabase(String jsonResponse) throws SQLException {
+        List<BookSuggestion> books = parseBooks(jsonResponse);
+
+        String sql = "INSERT INTO books (title, thumbnail) VALUES (?, ?)";
+
+        try (Connection conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/library", "root", "gem07012005");
+             PreparedStatement stmt = conn.prepareStatement(sql)) {
+
+            for (BookSuggestion book : books) {
+                stmt.setString(1, book.getTitle());
+                stmt.setString(2, book.getThumbnail());
+                stmt.executeUpdate();
+            }
+        }
+    }
+
+    // Lớp BookSuggestion để lưu trữ thông tin sách
     public static class BookSuggestion {
         private final String title;
         private final String thumbnail;
@@ -222,160 +194,4 @@ public class GoogleBooksAPI {
             return thumbnail;
         }
     }
-
-//    private static void parseBooks(String jsonResponse) {
-//        // Sử dụng Gson để phân tích JSON
-//        Gson gson = new Gson();
-//        JsonObject jsonObject = gson.fromJson(jsonResponse, JsonObject.class);
-//
-//        // Lấy danh sách sách từ "items"
-//        JsonArray items = jsonObject.getAsJsonArray("items");
-//
-//        if (items != null) {
-//            for (int i = 0; i < items.size(); i++) {
-//                JsonObject book = items.get(i).getAsJsonObject();
-//                JsonObject volumeInfo = book.getAsJsonObject("volumeInfo");
-//                String isbn = volumeInfo.has("industryIdentifiers") ? getIsbn(volumeInfo, "ISBN_13") : null;
-//                String title = volumeInfo.has("title") ? volumeInfo.get("title").getAsString() : null;
-//                String authors = volumeInfo.has("authors") ? volumeInfo.get("authors").toString() : null;
-//                String description = volumeInfo.has("description") ? volumeInfo.get("description").getAsString() : null;
-//                String categories = volumeInfo.has("categories") ? volumeInfo.get("categories").toString() : null;
-//                String thumbnail_link = volumeInfo.has("imageLinks") && volumeInfo.getAsJsonObject("imageLinks").has("thumbnail")
-//                        ? volumeInfo.getAsJsonObject("imageLinks").get("thumbnail").getAsString()
-//                        : null;
-//                String previewLink = volumeInfo.has("previewLink") ? volumeInfo.get("previewLink").getAsString() : null;
-//                Book book = new Book(isbn, title, authors, publisher, publishedDate);
-//                System.out.println("Title: " + title);
-//                System.out.println("Authors: " + authors);
-//                System.out.println("Publisher: " + publisher);
-//                System.out.println("Published Date: " + publishedDate);
-//                System.out.println("-------------");
-//            }
-//        } else {
-//            System.out.println("No books found.");
-//        }
-//    }
 }
-
-
-//import com.google.gson.Gson;
-//import com.google.gson.JsonArray;
-//import com.google.gson.JsonObject;
-//import okhttp3.OkHttpClient;
-//import okhttp3.Request;
-//import okhttp3.Response;
-//import java.io.IOException;
-//import java.sql.Connection;
-//import java.sql.DriverManager;
-//import java.sql.PreparedStatement;
-//import java.sql.SQLException;
-//import java.util.Arrays;
-//import java.util.List;
-//
-//public class GoogleBooksAPI {
-//    private static final String API_KEY = "AIzaSyAc4FaGOKPtQ2fogm2oMwiVpF5Q1Tl4seI";
-//    private static final String BASE_URL = "https://www.googleapis.com/books/v1/volumes";
-//
-//    public static void main(String[] args) {
-//        // Danh sách ISBN
-//        List<String> queries = Arrays.asList(
-//                "9781032919980", "9781439894057", "9783540403869", "9781614445166",
-//                "9783030451936", "9780883859155", "9781461261353", "9780521592710",
-//                "9781139435161", "9780849371646", "9781470474553", "9780128010501",
-//                "9781536191738", "9789811237157", "9781786343468", "9780821841488",
-//                "9780792369523", "9781461200079", "9789401018531", "9781931233675",
-//                "9780470317945", "9781134672462", "9780415977098", "9781351436700",
-//                "9780191604805", "9781101212943", "9781293565322", "9781498702683",
-//                "9780306836565", "9781846281686", "9783540761976", "9780817644970",
-//                "9781119062790", "9781511689250"
-//        );
-//
-//        OkHttpClient client = new OkHttpClient();
-//
-//        for (String isbn : queries) {
-//            String url = BASE_URL + "?q=isbn:" + isbn + "&key=" + API_KEY;
-//
-//            // Tạo Request
-//            Request request = new Request.Builder()
-//                    .url(url)
-//                    .build();
-//
-//            try {
-//                // Gửi Request và nhận Response
-//                Response response = client.newCall(request).execute();
-//
-//                if (response.isSuccessful() && response.body() != null) {
-//                    // Đọc nội dung phản hồi
-//                    String jsonResponse = response.body().string();
-//                    System.out.println("Results for ISBN: " + isbn);
-//                    parseBooks(jsonResponse);
-//                } else {
-//                    System.out.println("Error for ISBN " + isbn + ": " + response.code());
-//                }
-//            } catch (IOException e) {
-//                System.out.println("Error for ISBN " + isbn + ": " + e.getMessage());
-//            }
-//        }
-//    }
-//
-//    private static void parseBooks(String jsonResponse) {
-//        // Sử dụng Gson để phân tích JSON
-//        Gson gson = new Gson();
-//        JsonObject jsonObject = gson.fromJson(jsonResponse, JsonObject.class);
-//
-//        // Lấy danh sách sách từ "items"
-//        JsonArray items = jsonObject.getAsJsonArray("items");
-//
-//        if (items != null) {
-//            for (int i = 0; i < items.size(); i++) {
-//                JsonObject book = items.get(i).getAsJsonObject();
-//                JsonObject volumeInfo = book.getAsJsonObject("volumeInfo");
-//
-//                // Lấy thông tin cơ bản
-//                String title = volumeInfo.get("title").getAsString();
-//                String authors = volumeInfo.has("authors") ? volumeInfo.get("authors").toString() : "Unknown";
-//                String publisher = volumeInfo.has("publisher") ? volumeInfo.get("publisher").getAsString() : "Unknown";
-//                String publishedDate = volumeInfo.has("publishedDate") ? volumeInfo.get("publishedDate").getAsString() : "Unknown";
-//
-//                System.out.println("Title: " + title);
-//                System.out.println("Authors: " + authors);
-//                System.out.println("Publisher: " + publisher);
-//                System.out.println("Published Date: " + publishedDate);
-//                System.out.println("-------------");
-//
-//                // Gọi hàm lưu vào database
-//                try {
-//                    saveBookToDatabase(title, authors, publisher, publishedDate);
-//                    System.out.println("Đã thêm sách thành công");
-//                } catch (SQLException e) {
-//                    System.out.println("Lỗi khi thêm sách vào database: " + e.getMessage());
-//                }
-//            }
-//        } else {
-//            System.out.println("No books found.");
-//        }
-//    }
-//
-//    private static void saveBookToDatabase(String title, String authors, String publisher, String publishedDate) throws SQLException {
-//        // Cấu hình thông tin kết nối database
-//        String url = "jdbc:mysql://localhost:3306/libraryy";
-//        String user = "root";
-//        String password = "huyen16125";
-//
-//        // Câu lệnh SQL
-//        String sql = "INSERT INTO books (title, authors, publisher, published_date) VALUES (?, ?, ?, ?)";
-//
-//        // Kết nối và thực hiện câu lệnh
-//        try (Connection conn = DriverManager.getConnection(url, user, password);
-//             PreparedStatement stmt = conn.prepareStatement(sql)) {
-//            stmt.setString(1, title);
-//            stmt.setString(2, authors);
-//            stmt.setString(3, publisher);
-//            stmt.setString(4, publishedDate);
-//
-//            stmt.executeUpdate();
-//        }
-//    }
-//}
-
-
